drrx/fixtures/positive/positive-combined-ok.tree.drrx
.                         # root
 +== root-a.txt
 | :== root-b.txt
|                         # spacer between root files and next directory
+ -- src/
  |+== a.py
    :== b.py
  |                       # spacer before subdirs
  +-- lib/
  | +== util.py
  | :== core.py
  |
  :-- tests/
      +== test_a.py
      :== test_b.py
