drrx/fixtures/invalid/invalid-missing-spacer.tree.drrx
.                         # root
+== README.md             # file block
+-- src/                  # EXPECTED ERROR: FW.06 missing spacer before directory
| +== main.py
| :-- pkg/
